--- a/.github/workflows/update-links.yml
+++ b/.github/workflows/update-links.yml
@@ -26,19 +26,18 @@ jobs:
       id: update_links
       run: |
         python scripts/update_links.py
-      continue-on-error: true
+        script_exit_code=$?
 
-    - name: Check for changes
-      id: check_changes
-      run: |
-        if grep -q 'true' changes_made.txt; then
-          echo "changes=true" >> $GITHUB_ENV
+        if [ $script_exit_code -eq 0 ]; then
+          echo "Changes were made."
+          echo "::set-output name=changes::true"
         else
-          echo "changes=false" >> $GITHUB_ENV
+          echo "No changes were made."
+          echo "::set-output name=changes::false"
         fi
 
     - name: Commit changes
-      if: env.changes == 'true'
+      if: steps.update_links.outputs.changes == 'true'
       run: |
         git config --global user.name 'github-actions'
         git config --global user.email 'github-actions@github.com'
